--- a/src/Net.Chdk.Watchers.Volume.Core/Net.Chdk.Watchers.Volume.Core.csproj
+++ b/src/Net.Chdk.Watchers.Volume.Core/Net.Chdk.Watchers.Volume.Core.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{893569FE-D17E-46B4-A08F-8D7B072BE07B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Net.Chdk.Watchers.Card</RootNamespace>
-    <AssemblyName>Net.Chdk.Watchers.Card.Core</AssemblyName>
+    <RootNamespace>Net.Chdk.Watchers.Volume</RootNamespace>
+    <AssemblyName>Net.Chdk.Watchers.Volume.Core</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
